Add new items and code edit

--- a/bewijsmateriaal.html
+++ b/bewijsmateriaal.html
@@ -17,7 +17,8 @@
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="showcase.html"><i class="fas fa-images"></i> Showcase</a>
         <a href="bewijsmateriaal.html"><i class="fas fa-file-alt"></i> Bewijsmateriaal</a>
-        <a href="CV-Anthony-2024.pdf" download><i class="fas fa-file-pdf"></i> Download CV</a>
+        <a href="CV-Anthony-2024.png" target="_blank"><i class="fas fa-file-image"></i> Bekijk mijn CV</a>
+        <a href="Feedbacklogboek_Minor_Anthony-Jankie.xlsx" target="_blank"><i class="fas fa-file-alt"></i> Open het logboek</a>
     </nav>
     
     <main class="content">
@@ -33,7 +34,7 @@
                         SEO-optimalisatie. Mijn sterke punten lagen in contentcreatie en het bouwen van websites, maar ik merkte al snel dat
                         er nog veel ruimte was om te groeien op het gebied van online marketingstrategieën.</p>
                 </section>
-                </div>
+            </div>
             <div class="proof-row">
                 <div class="proof-card">
                     <img src="nulmeting-1.png" alt="Bewijsstuk 1 - Nulmeting">
@@ -71,6 +72,12 @@
                 <div class="proof-card2">
                     <h2>PowerBI Dashboard Proof Bakery</h2>
                     <img src="logo-proofbakery-dashboard-powerbi.png" alt="Bewijsstuk 7 - PowerBI">
+                </div>
+            </div>
+            <div class="proof-row">
+                <div class="excel-link">
+                    <h2>Bekijk het logboek hier</h2>
+                    <a href="Feedbacklogboek_Minor_Anthony-Jankie.xlsx" target="_blank">Open het logboek</a>
                 </div>
             </div>
         </div>
