--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="showcase.html"><i class="fas fa-images"></i> Showcase</a>
         <a href="bewijsmateriaal.html"><i class="fas fa-file-alt"></i> Bewijsmateriaal</a>
-        <a href="CV-Anthony-2024.pdf" download><i class="fas fa-file-pdf"></i> Download CV</a>
+        <a href="CV-Anthony-2024.png" target="_blank"><i class="fas fa-file-image"></i> Bekijk mijn CV</a>
+        <a href="Feedbacklogboek_Minor_Anthony-Jankie.xlsx" target="_blank"><i class="fas fa-file-alt"></i> Open het logboek</a>
     </nav>
     
     <main class="content">
         <section id="samenvatting">
             <div class="card">
                 <h2>Samenvatting van mijn portfolio</h2>
-                <p>Mijn portfolio bevat twee projecten die echt bepalend zijn geweest voor mijn leerproces tijdens de minor: Simplicare
-                    en Project Klant bij Proof Bakery. Beide projecten hebben me geholpen om de theorie die ik tijdens de minor leerde,
-                    in de praktijk toe te passen en mijn kennis op het gebied van online marketing en consultancy te vergroten.</p>
-                <p>Bij Simplicare kreeg ik de kans om een merk helemaal vanaf de grond op te bouwen. Het was een ontzettend leerzaam
-                    proces waarin ik verantwoordelijk was voor het opzetten van adcampagnes, content creatie en het analyseren van
-                    gegenereerde data. Het voelde als een complete ervaring waarbij ik niet alleen mijn creativiteit, maar ook mijn
-                    organisatorische en technische vaardigheden moest inzetten. Ik heb niet alleen geleerd hoe ik een merkvisie
-                    vormgeef, maar ook hoe ik dit vertaal naar een online strategie die daadwerkelijk resultaten opbrengt.</p>
-                <p>Het project Klant bij Proof Bakery was een waardevolle kans om de kennis die ik in de minor had opgedaan, toe te
-                    passen in een echte, werkende omgeving. Hier gaf ik advies over hoe de social media marketing van een bedrijf
-                    verbeterd konden worden. Het was een beetje een spiegel voor mijn eigen ideeën en strategieën, en het was goed om te
-                    zien hoe de theoretische kennis in de praktijk gebracht kan worden om verbeteringen te realiseren.</p>
+                <p>Tijdens de minor heb ik aan twee projecten gewerkt die echt een enorme impact hebben gehad op mijn leerproces:
+                    Simplicare en Project Klant bij Proof Bakery. Beide projecten hebben me de kans gegeven om wat ik tijdens de minor
+                    leerde meteen toe te passen en mijn kennis over online marketing en consultancy flink uit te breiden.</p>
+                <p>Bij Simplicare kreeg ik de unieke kans om een compleet merk vanaf nul op te bouwen. Het hele proces, van het opzetten
+                    van adcampagnes en het creëren van content tot het analyseren van data, was ontzettend leerzaam. Ik kon mijn
+                    creativiteit erin kwijt, maar het was ook een goede oefening in organiseren en het combineren van technische en
+                    marketingvaardigheden. Dit project liet me zien hoe je een merkvisie vertaalt naar een concrete online strategie die
+                    echt resultaat oplevert.</p>
+                <p>Het project Klant bij Proof Bakery gaf me de mogelijkheid om de kennis en tools die ik tijdens de minor had opgedaan,
+                    in een echte bedrijfsomgeving toe te passen. Hier was mijn opdracht om te adviseren over hoe de social media
+                    marketing van het bedrijf kon worden verbeterd, het maken van content en het schrijven van blogs. Dit voelde als een
+                    spiegel voor mijn eigen aanpak: het was interessant om te zien hoe de theorie in een praktische setting werkt en om
+                    daar resultaten mee te behalen.</p>
             </div>
         </section>
         
@@ -45,27 +47,25 @@
             <h2>Inleiding</h2>
             <div class="card">
                 <h3>Motivatie</h3>
-                <p>Mijn keuze om deze minor te volgen kwam voort uit mijn nieuwsgierigheid naar de kracht van online adverteren en
-                    social media in de e-commercewereld. Ik wilde niet alleen leren hoe ik advertenties kan inzetten om de verkoop te
-                    stimuleren, maar ook hoe ik social media kan gebruiken om een grotere community op te bouwen. Ik wist al dat ik met
-                    mijn eigen onderneming een stap verder wilde komen, en deze minor leek voor mij de perfecte gelegenheid om de kennis
-                    en tools te krijgen die ik nodig had om mijn bedrijf echt te laten groeien.</p>
+                <p>Mijn keuze voor deze minor kwam vooral voort uit mijn nieuwsgierigheid naar online adverteren en hoe je social media
+                    kunt inzetten om meer conversies en een sterkere community op te bouwen. Ik wilde leren hoe je campagnes écht
+                    effectief maakt en hoe ik die kennis direct kan toepassen op mijn eigen e-commercebedrijf. Deze minor leek daarvoor
+                    perfect, een combinatie van praktijk en theorie die ik meteen kon gebruiken om mijn bedrijf naar een hoger niveau
+                    te tillen.</p>
             </div>
             <div class="card">
                 <h3>Relatie tot mijn opleiding</h3>
-                <p>Mijn studie Cybersecurity heeft me altijd geholpen om een diepgaand begrip te ontwikkelen van de technische kant van
-                    digitale omgevingen, zoals websites en systemen. De minor was een mooie aanvulling, omdat het me liet zien hoe ik
-                    die technische kennis kan combineren met marketingvaardigheden. Het stelde me in staat om zowel de technische als de
-                    commerciële kant van mijn werk beter te begrijpen en samen te brengen. Deze brug tussen technologie en marketing is
-                    essentieel in de moderne online wereld en heeft me geholpen om zowel mijn bedrijf als mijn vaardigheden verder te
-                    ontwikkelen.</p>
+                <p>Mijn achtergrond in Cybersecurity heeft me altijd geholpen om de technische kant van digitale systemen goed te
+                    begrijpen. Tijdens de minor heb ik geleerd hoe ik die technische kennis kan combineren met marketingvaardigheden,
+                    zoals het bouwen van een sterke online aanwezigheid en het slim inzetten van data. Voor mij was deze minor dus echt
+                    een mooie brug tussen technologie en marketing. Het gaf me de tools om beide werelden samen te brengen en dat heeft
+                    zowel mijn vaardigheden als mijn bedrijf een flinke boost gegeven.</p>
             </div>
             <div class="card">
                 <h3>Toekomstperspectief</h3>
-                <p>Wat deze minor mij vooral heeft gebracht, is nieuwe perspectieven en inzichten voor mijn eigen onderneming. Het heeft
-                    me geholpen te begrijpen hoe ik mijn marketingstrategieën kan optimaliseren en hoe ik gerichter klanten kan
-                    bereiken. Het heeft mijn visie over de toekomst van mijn bedrijf veranderd, en ik voel me nu veel beter voorbereid
-                    om verder te groeien als ondernemer in de e-commerce.</p>
+                <p>Wat ik vooral meeneem uit deze minor is hoe ik mijn marketingstrategieën kan verfijnen en beter kan inspelen op mijn
+                    doelgroep. Dit heeft niet alleen mijn visie op mijn eigen bedrijf veranderd, maar me ook een hele hoop nieuwe
+                    inzichten gegeven die ik kan toepassen om verder te groeien als ondernemer.</p>
             </div>
         </section>
 
@@ -74,31 +74,31 @@
             <div class="card">
                 <h3>Persoonlijke Leervragen</h3>
                 <ul>
-                    <li>Hoe kan ik effectieve, geavanceerde adcampagnes opzetten voor social media en deze optimaal targeten?</li>
-                    <li>Hoe pas ik SEO toe om mijn website om content beter zichtbaar te maken voor zoekmachines?</li>
-                    <li>Hoe kan ik mijn doelgroep beter begrijpen en bereiken met de juiste marketingstrategieën?</li>
+                    <li>Hoe zet ik social media advertenties op die écht werken en gebruikmaken van geavanceerde targetingopties?</li>
+                    <li>Hoe zorg ik ervoor dat mijn website en content beter gevonden worden door zoekmachines met behulp van SEO?</li>
+                    <li>Hoe kan ik mijn doelgroep beter begrijpen en effectiever bereiken met de juiste marketingaanpak?</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Concrete Leerdoelen</h3>
                 <ul>
-                    <li>Aan het einde van de minor wil ik in staat zijn om volledig geoptimaliseerde adcampagnes op te zetten met
-                        geavanceerde targetingopties.</li>
-                    <li>Ik wil mijn SEO-vaardigheden verder verbeteren, zodat ik met mijn website en blogs meer organisch verkeer kan
+                    <li>Aan het eind van de minor wil ik in staat zijn om volledig geoptimaliseerde adcampagnes te maken, met een slimme
+                        inzet van targeting.</li>
+                    <li>Ik wil mijn SEO-skills verbeteren, zodat ik mijn blogs en website zo kan optimaliseren dat ze meer organisch verkeer
                         aantrekken.</li>
-                    <li>Ik wil mijn kennis uitbreiden over hoe ik mijn doelgroep nauwkeuriger kan segmenteren en gerichter kan benaderen,
-                        zodat ik marketingcampagnes effectiever kan inzetten.</li>
+                    <li>Ik wil mijn kennis over doelgroepsegmentatie verdiepen, zodat ik campagnes effectiever kan richten op de juiste
+                        mensen.</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Activiteiten binnen de minor</h3>
-                <p>Tijdens het Simplicare project had ik de kans om echte adcampagnes op te zetten en SEO-toepassingen te integreren.
-                    Dit project was de ideale omgeving om de theorie in de praktijk te brengen en te testen wat wel en niet werkt. De
-                    lessen en de feedback van docenten en medestudenten speelden dan ook een belangrijke rol in mijn leerproces.</p>
-                <p>Tijdens het project Klant bij Proof Bakery ging ik verder met het verbeteren van mijn SEO-vaardigheden door blogs te
-                    schrijven die geoptimaliseerd waren voor zoekmachines. En heb ik een uitgebreid social media analyse uitgevoerd.
-                    Daarnaast ben ik ook bezig geweest met het creëren van content met behulp van AI wat zeer interessant was. De
-                    hoorcolleges hebben een hiermee ook een belangrijke rol gespeeld bij het verbreden van mijn kennis</p>
+                <p>Het project Simplicare gaf me de perfecte kans om theorie in de praktijk te brengen. Ik heb tijdens dit project
+                    geleerd hoe ik echte adcampagnes kan opzetten en hoe ik SEO kan toepassen op content. Daarnaast hielpen de feedback
+                    van docenten en medestudenten me enorm om mijn ideeën te verbeteren en verder uit te werken.</p>
+                <p>Bij het project Klant voor Proof Bakery ging ik dieper in op SEO door blogs te schrijven die waren geoptimaliseerd
+                    voor zoekmachines. Ook voerde ik een uitgebreide social media-analyse uit en werkte ik met AI-tools om content te
+                    creëren, iets wat ik verrassend leuk vond en graag vaker wil doen. De colleges en workshops speelden ook een grote
+                    rol in mijn groei, ze gaven me inzicht in de nieuwste trends en technieken op het gebied van online marketing.</p>
             </div>
         </section>
     </main>
