--- a/showcase.html
+++ b/showcase.html
@@ -17,36 +17,40 @@
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="showcase.html"><i class="fas fa-images"></i> Showcase</a>
         <a href="bewijsmateriaal.html"><i class="fas fa-file-alt"></i> Bewijsmateriaal</a>
-        <a href="CV-Anthony-2024.pdf" download><i class="fas fa-file-pdf"></i> Download CV</a>
+        <a href="CV-Anthony-2024.png" target="_blank"><i class="fas fa-file-image"></i> Bekijk mijn CV</a>
+        <a href="Feedbacklogboek_Minor_Anthony-Jankie.xlsx" target="_blank"><i class="fas fa-file-alt"></i> Open het logboek</a>
     </nav>
     
     <main class="content">
         <div class="card">
             <section id="reflectie">
                 <h2>Reflectie en Groei</h2>
-                <p>De afgelopen periode was ontzettend leerzaam. Het heeft me niet alleen geholpen mijn technische vaardigheden verder
-                    te ontwikkelen, maar ook mijn commerciële en analytische vaardigheden te versterken. Ik ontdekte hoe ik advertenties
-                    echt effectief kan inzetten en hoe SEO mijn online zichtbaarheid kan verbeteren. Het opzetten van advertenties via
-                    platformen zoals Instagram en Facebook was in het begin best een uitdaging, maar naarmate ik meer ervaring opdeed en
-                    feedback ontving, begreep ik steeds beter hoe ik campagnes moest optimaliseren.</p>
-                <p>Het schrijven van SEO-vriendelijke blogs was een ander gebied waar ik enorme vooruitgang boekte. Aanvankelijk had ik
-                    moeite met het vinden van de juiste zoekwoorden en het structureren van content, maar door de richtlijnen die we
-                    kregen en de ervaring die ik opdeed, kan ik nu blogs schrijven die niet alleen waardevol zijn voor de lezer, maar
-                    ook goed vindbaar zijn in zoekmachines.</p>
-                <p>Wat ik wel heb gemerkt, is dat ik meer aandacht had kunnen besteden aan het uitbreiden van mijn adcampagnes en het
-                    optimaliseren van de targetingopties. Door meer te focussen op geavanceerde targeting, had ik mijn
-                    advertentiebudgetten nog efficiënter kunnen inzetten en de mogelijke conversies kunnen verhogen. Dit is een
-                    belangrijk leerpunt voor de toekomst, en ik wil me hier verder in verdiepen. In de toekomst wil ik mij verder
-                    verdiepen in advanced targeting voor advertenties en conversieoptimalisatie. Mijn doel is dan ook om meer grip te
-                    krijgen op hoe ik met een lager budget hogere resultaten kan behalen.</p>
+                <p>De afgelopen periode was voor mij echt een enorme leerervaring. Ik heb niet alleen mijn technische kennis kunnen
+                    verdiepen, maar ook mijn commerciële en analytische vaardigheden verder ontwikkeld. Vooral het effectief inzetten
+                    van advertenties en het verbeteren van mijn online zichtbaarheid door SEO waren twee grote focuspunten. In het begin
+                    vond ik het opzetten van advertenties via platforms zoals Instagram en Facebook best ingewikkeld. Er zijn zoveel
+                    opties en variabelen waar je rekening mee moet houden, dat het even duurde voordat ik echt doorhad hoe alles werkt.
+                    Maar door meer te oefenen, feedback te ontvangen en successen te analyseren, kreeg ik steeds meer grip op hoe je
+                    campagnes kunt optimaliseren om betere resultaten te halen.</p>
+                <p>Een ander gebied waarin ik flinke stappen heb gezet, is het schrijven van SEO-vriendelijke blogs. Aanvankelijk vond
+                    ik het lastig om de juiste zoekwoorden te vinden en de content logisch te structureren. Maar dankzij de richtlijnen
+                    die we kregen en de ervaring die ik heb opgedaan tijdens de projecten, weet ik nu hoe ik blogs kan schrijven die
+                    niet alleen waardevol zijn voor de lezer, maar ook goed scoren in zoekmachines.</p>
+                <p>Wat ik wel merkte, is dat ik meer tijd had kunnen besteden aan het verder uitbouwen van mijn advertentiecampagnes en
+                    het perfectioneren van de targetingopties. Als ik me daar meer in had verdiept, had ik waarschijnlijk nog betere
+                    conversies kunnen halen en mijn advertentiebudget efficiënter kunnen inzetten. Dit is een belangrijk leerpunt voor
+                    de toekomst. Daarom wil ik me verder verdiepen in advanced targeting en conversieoptimalisatie. Mijn doel is om met
+                    een kleiner budget hogere resultaten te behalen en nog strategischer te werk te gaan in mijn campagnes.</p>
                 <h2>Persoonlijke Conclusie</h2>
-                <p>Deze minor was voor mij een periode van veel persoonlijke en professionele groei. Het heeft mijn vaardigheden op
-                    het gebied van online marketing enorm verbeterd en me geholpen om mijn bedrijf naar een hoger niveau te tillen.
-                    Ik heb geleerd hoe ik advertenties en SEO effectief kan inzetten, maar ook hoe ik de data uit campagnes kan
-                    gebruiken om mijn marketingstrategieën te verbeteren.</p>
-                <p>Voor de toekomst wil ik me verder verdiepen in geavanceerde technieken voor targeting en conversieoptimalisatie.
-                    Mijn doel is om mijn online marketingstrategie verder te verfijnen en meer waarde te bieden voor mijn
-                    onderneming.</p>
+                <p>Deze minor heeft me enorm veel gebracht, zowel op persoonlijk als professioneel vlak. Het was een periode waarin ik
+                    niet alleen mijn vaardigheden op het gebied van online marketing heb verbeterd, maar ook mijn vertrouwen in
+                    mijn eigen aanpak heb vergroot. Ik voel me nu veel beter voorbereid om mijn bedrijf naar een hoger niveau te tillen.
+                    Ik heb geleerd hoe ik advertenties en SEO effectief kan inzetten, maar ook hoe ik data uit campagnes kan gebruiken
+                    om mijn strategieën steeds verder aan te scherpen. Het is mooi om te zien hoe theorie en praktijk elkaar hierin
+                    versterken.</p>
+                <p>Voor de toekomst wil ik me meer gaan richten op geavanceerde technieken voor targeting en conversieoptimalisatie.
+                    Mijn ultieme doel is om mijn online marketingstrategie nog slimmer en effectiever te maken. Ik wil niet alleen mijn
+                    eigen onderneming verder laten groeien, maar ook meer waarde kunnen bieden aan klanten en andere samenwerkingen.</p>
             </section>
         </div>
         <div class="card">
@@ -80,6 +84,17 @@
                     <h4>Resultaten voor instagram ad</h4>
                     <img src="Advertentie-resultaat.png" alt="Ad-results">
                 </div>
+                <div class="gallery-item">
+                    <h4>Social media post voor community betrokkenheid</h4>
+                    <img src="Website Launch.png" alt="Social post">
+                </div>
+                <div class="gallery-item">
+                    <h4>Prototype van de selfcare box voor Simplicare</h4>
+                    <img src="Prototype-11.png" alt="Protoype">
+                </div>
+                <div class="gallery-item">
+                    <h4>Prototype van de selfcare box voor Simplicare</h4>
+                    <img src="Prototype-4.png" alt="Prototype">
                 </div>
         </div>
         <div class="card">
@@ -88,24 +103,28 @@
             <div class="gallery">
                 <div class="gallery-item">
                     <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
-                    <a href="https://youtube.com/shorts/mcbf_SVGNbw?feature=share">Bekijk de video op Youtube</a>
+                    <a href="https://youtube.com/embed/mcbf_SVGNbw?feature=share">Bekijk de video op Youtube</a>
                     <video controls width="300">
                         <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="gallery-item">
                     <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
-                    <a href="https://youtube.com/shorts/EFRhNkbdlVM?feature=share">Bekijk de video op Youtube</a>
+                    <a href="https://youtube.com/embed/EFRhNkbdlVM?feature=share">Bekijk de video op Youtube</a>
                     <video controls width="300">
                         <source src="How-to-Video-Hoe maak je Croissant Bread Pudding.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="gallery-item">
                     <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
-                    <a href="https://youtube.com/shorts/b0oxzI48l84?feature=share">Bekijk de video op Youtube</a>
+                    <a href="https://youtube.com/embed/b0oxzI48l84?feature=share">Bekijk de video op Youtube</a>
                     <video controls width="300">
                         <source src="How-to-Video - Broodsticks van Oud Stokbrood.mp4" type="video/mp4">
                     </video>
+                </div>
+                <div class="pdf-viewer">
+                    <h4>Geschreven blog over de geheimen van Desembrood</h4>
+                    <iframe src="De Geheimen van Desem Waarom Desembrood Bij Proof Bakery Zo.pdf" width="100%" height="600px"></iframe>
                 </div>
             </div>
         </div>
