--- a/showcase.html
+++ b/showcase.html
@@ -104,9 +104,10 @@
                 <div class="gallery-item">
                     <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
                     <a href="https://www.youtube.com/embed/mcbf_SVGNbw">Bekijk de video op Youtube</a>
-                    <video controls width="300">
-                        <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
-                    </video>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mcbf_SVGNbw" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="gallery-item">
                     <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
