--- a/showcase.html
+++ b/showcase.html
@@ -112,16 +112,18 @@
                 <div class="gallery-item">
                     <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
                     <a href="https://www.youtube.com/embed/EFRhNkbdlVM">Bekijk de video op Youtube</a>
-                    <video controls width="300">
-                        <source src="How-to-Video-Hoe maak je Croissant Bread Pudding.mp4" type="video/mp4">
-                    </video>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EFRhNkbdlVM" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="gallery-item">
                     <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
                     <a href="https://www.youtube.com/embed/b0oxzI48l84">Bekijk de video op Youtube</a>
-                    <video controls width="300">
-                        <source src="How-to-Video - Broodsticks van Oud Stokbrood.mp4" type="video/mp4">
-                    </video>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/b0oxzI48l84" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="pdf-viewer">
                     <h4>Geschreven blog over de geheimen van Desembrood</h4>
