size video  edited

--- a/showcase.html
+++ b/showcase.html
@@ -104,7 +104,7 @@
                 <div class="gallery-item">
                     <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
                     <a href="https://www.youtube.com/embed/mcbf_SVGNbw">Bekijk de video op Youtube</a>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mcbf_SVGNbw" title="YouTube video player"
+                    <iframe src="https://www.youtube.com/embed/mcbf_SVGNbw" title="YouTube video player"
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
@@ -112,7 +112,7 @@
                 <div class="gallery-item">
                     <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
                     <a href="https://www.youtube.com/embed/EFRhNkbdlVM">Bekijk de video op Youtube</a>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EFRhNkbdlVM" title="YouTube video player"
+                    <iframe src="https://www.youtube.com/embed/EFRhNkbdlVM" title="YouTube video player"
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
@@ -120,7 +120,7 @@
                 <div class="gallery-item">
                     <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
                     <a href="https://www.youtube.com/embed/b0oxzI48l84">Bekijk de video op Youtube</a>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/b0oxzI48l84" title="YouTube video player"
+                    <iframe src="https://www.youtube.com/embed/b0oxzI48l84" title="YouTube video player"
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
